--- a/index.html
+++ b/index.html
@@ -4,7 +4,143 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="shortcut icon"
+      href="/images/logo-white.svg"
+      type="image/x-icon"
+    />
+    <link rel="stylesheet" href="/fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
-  <body></body>
+  <body>
+    <!-- Header -->
+    <header class="header">
+      <nav class="header__menu">
+        <ul class="header__links-list">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
+            <a href="#0" target="_self" class="header__link">главная</a>
+          </li>
+          <li class="header__links-list-item">
+            <a
+              href="#lots"
+              target="_self"
+              class="header__link header__link_active"
+              >посмотреть лоты</a
+            >
+          </li>
+          <li class="header__links-list-item">
+            <a
+              href="#about"
+              target="_self"
+              class="header__link header__link_active"
+              >об аукционе</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <a class="header__logo">
+        <img
+          src="/images/logo-black.svg"
+          alt="логотип"
+          class="header__logo-image"
+        />
+      </a>
+      <address class="address header__address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <br />
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <br />
+        наб. Принсенграхт 263-265, Амстердам
+      </address>
+    </header>
+
+    <!-- Content -->
+    <main class="main">
+      <!-- Cover -->
+      <section class="cover overlay">
+        <h1 class="cover__title">
+          <span class="aligned-text"
+            >о<span class="letter-spacing-extended">но</span></span
+          >
+          <span class="aligned-text aligned-text_center"
+            >те<span class="letter-spacing-extended">бе</span>
+          </span>
+          <span class="aligned-text aligned-text_right"
+            ><span class="letter-spacing-extended">н</span>aд<span
+              class="no-letter-spacing"
+              >о</span
+            ></span
+          >
+        </h1>
+        <div class="cover__description">
+          <h2 class="cover__description-text">
+            Аукцион вещей, в которые никто не верил
+          </h2>
+          <button type="button" class="bet-button">Сделать ставку</button>
+        </div>
+      </section>
+
+      <!-- Lots -->
+      <section class="lots">
+        <h2 class="lots__heading">Лоты</h2>
+        <ul class="lots__card-list">
+          <li class="lots__card-list-item">
+            <a class="card-link">
+              <acticle class="card overlay card_type_film">
+                <h3 class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </h3>
+                <p class="card__text">
+                  Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
+                  ставка, если бы вы не знали, что режиссёр — Пол Томас
+                  Андерсон?
+                </p>
+              </acticle>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link">
+              <acticle class="card overlay card_type_book">
+                <h3 class="card__title">
+                  Книга, где описан один скучный день из жизни рекламного агента
+                </h3>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </acticle>
+            </a>
+          </li>
+          <li class="lots__card-list-item">
+            <a class="card-link">
+              <acticle class="card overlay card_type_picture">
+                <h3 class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </h3>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков… Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </acticle>
+            </a>
+          </li>
+        </ul>
+        <a class="lots__look-more-link">посмотреть больше</a>
+      </section>
+
+      <!-- About -->
+      <section class="about"></section>
+    </main>
+
+    <!-- Footer -->
+    <footer class="footer">123</footer>
+  </body>
 </html>
