--- a/index.html
+++ b/index.html
@@ -170,6 +170,54 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer">123</footer>
+    <footer class="footer">
+      <address class="address footer__address">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <br />
+        <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+        <br />
+        наб. Принсенграхт 263-265, Амстердам
+      </address>
+      <nav class="footer__menu">
+        <ul class="footer__menu-list">
+          <li class="footer__menu-list-item">
+            <a href="#0" target="_self" class="footer__menu-link">главная</a>
+          </li>
+          <li class="footer__menu-list-item">
+            <a
+              href="#lots"
+              target="_self"
+              class="footer__menu-link footer__menu-link_active"
+              >посмотреть лоты</a
+            >
+          </li>
+          <li class="footer__menu-list-item">
+            <a
+              href="#about"
+              target="_self"
+              class="footer__menu-link footer__menu-link_active"
+              >об аукционе</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <ul class="footer__social-list">
+        <li class="footer__social-list-item">
+          <a href="" class="footer__social-link">
+            <img src="" alt="" class="footer__social-icon" />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="" class="footer__social-link">
+            <img src="" alt="" class="footer__social-icon" />
+          </a>
+        </li>
+        <li class="footer__social-list-item">
+          <a href="" class="footer__social-link">
+            <img src="" alt="" class="footer__social-icon" />
+          </a>
+        </li>
+      </ul>
+    </footer>
   </body>
 </html>
