--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         <br />
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <br />
-        наб. Принсенграхт 263-265, Амстердам
+        наб. Принсенграхт 263-265,
+        <br />
+        Амстердам
       </address>
     </header>
 
@@ -176,7 +178,9 @@
         <br />
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
         <br />
-        наб. Принсенграхт 263-265, Амстердам
+        наб. Принсенграхт 263-265,
+        <br />
+        Амстердам
       </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
@@ -204,17 +208,29 @@
       <ul class="footer__social-list">
         <li class="footer__social-list-item">
           <a href="" class="footer__social-link">
-            <img src="" alt="" class="footer__social-icon" />
+            <img
+              src="./images/yt.svg"
+              alt="значок социальной сети"
+              class="footer__social-icon"
+            />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a href="" class="footer__social-link">
-            <img src="" alt="" class="footer__social-icon" />
+            <img
+              src="./images/vk.svg"
+              alt="значок социальной сети"
+              class="footer__social-icon"
+            />
           </a>
         </li>
         <li class="footer__social-list-item">
           <a href="" class="footer__social-link">
-            <img src="" alt="" class="footer__social-icon" />
+            <img
+              src="./images/pinterest.svg"
+              alt="значок социальной сети"
+              class="footer__social-icon"
+            />
           </a>
         </li>
       </ul>
