--- a/index.html
+++ b/index.html
@@ -63,11 +63,14 @@
       <!-- Cover -->
       <section class="cover overlay">
         <h1 class="cover__title">
-          <span class="aligned-text"
+          <span class="aligned-text line-height-extended"
             >о<span class="letter-spacing-extended">но</span></span
           >
           <span class="aligned-text aligned-text_center"
-            >те<span class="letter-spacing-extended">бе</span>
+            >те<span class="letter-spacing-extended">б<span
+              class="no-letter-spacing"
+              >е</span
+            ></span>
           </span>
           <span class="aligned-text aligned-text_right"
             ><span class="letter-spacing-extended">н</span>aд<span
@@ -90,7 +93,7 @@
         <ul class="lots__card-list">
           <li class="lots__card-list-item">
             <a class="card-link">
-              <acticle class="card overlay card_type_film">
+              <article class="card overlay card_type_film">
                 <h3 class="card__title">
                   Фильм режиссёра, который бросил киношколу
                 </h3>
@@ -99,12 +102,12 @@
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
                   Андерсон?
                 </p>
-              </acticle>
+              </article>
             </a>
           </li>
           <li class="lots__card-list-item">
             <a class="card-link">
-              <acticle class="card overlay card_type_book">
+              <article class="card overlay card_type_book">
                 <h3 class="card__title">
                   Книга, где описан один скучный день из жизни рекламного агента
                 </h3>
@@ -116,12 +119,12 @@
                   эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
                   Джеймса Джойса?
                 </p>
-              </acticle>
+              </article>
             </a>
           </li>
           <li class="lots__card-list-item">
             <a class="card-link">
-              <acticle class="card overlay card_type_picture">
+              <article class="card overlay card_type_picture">
                 <h3 class="card__title">
                   Картина, которую повторит даже 5-летний сын маминой подруги
                 </h3>
@@ -131,7 +134,7 @@
                   котиков… Сколько бы вы на такое поставили, если бы не знали,
                   что это — одна из революционных работ Кандинского?
                 </p>
-              </acticle>
+              </article>
             </a>
           </li>
         </ul>
