--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </nav>
       <a class="header__logo">
         <img
-          src="/images/logo-black.svg"
+          src="./images/logo-black.svg"
           alt="логотип"
           class="header__logo-image"
         />
